src/test/run-pass/union/union-const-trans.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

#![feature(untagged_unions)]

union U {
    a: u64,
    b: u64,
}

const C: U = U { b: 10 };

fn main() {
    unsafe {
        let a = C.a;
        let b = C.b;
        assert_eq!(a, 10);
        assert_eq!(b, 10);
     }
}
